src/App.scss
/* ... */
.container {
  text-align: center;
  width: 80%;
  max-width: 100rem;
  z-index: 100;
}
.stats {
  margin-top: 5px;
}
.boundaried-land-indian {
  stroke: #464646;

  &:hover::after {
    content: "";
    background-color: rgba(255, 255, 255, 0.25);
    width: 100%;
    height: 100%;
    display: block;
  }
}
.card {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 10px;
  box-sizing: border-box;
  box-shadow: 0 10px 40px -10px rgba(0, 64, 128, 0.2);
  transition: box-shadow 0.3s;
  background: #fff;
  overflow: auto;

  p {
    margin: 0;
  }
  .count {
    font-size: 2em;
    font-weight: 700;
  }

  .delta {
    font-weight: 800;
  }

  &.confirmed .delta {
    color: red;
  }
  &.tested .delta {
    color: #17a2bc;
  }

  &.active .delta {
    color: red;
  }
  &.recovered .delta {
    color: green;
  }
}

// India State Map
.india-map-info {
  position: absolute;
  right: 0;
  min-width: 150px;
  .state-name {
    font-size: 1.25em;
  }
}

.map-controls {
  display: flex;
  flex-direction: column;
}

.instruction {
  font-size: 12px;
  color: #767676;
}

.india-state-maps {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin-top: 10px;
  margin-bottom: 5px;
  .india-state-stats {
    cursor: pointer;
    padding: 10px;
    min-width: 18%;

    &.confirmed {
      background: #ff00002b;
      color: #ff0e0e;
    }

    &.active {
      background: #ffa50026;
      color: #f69f00;
    }

    &.recovered {
      background: #4caa1d1f;
      color: #459e19;
    }

    &.deaths {
      background: #0000002b;
      color: #474747;
    }
    &.tested {
      background: #0014ff2b;
      color: #0e15ff;
    }

    h4 {
      font-size: 12px;
      margin: 0;
    }
    h5 {
      margin: 0;
      font-size: 16px;
    }
    h6 {
      font-size: 14px;
      margin: 0;
    }
  }
}
.india-svg-map {
  margin-top: 10px;
  position: relative;
  .regions {
    cursor: pointer;
  }
}

$primary: #ccc;
$primary-theme: #8ac6d1;
#range {
  -webkit-appearance: none;
  outline: none;
  cursor: pointer;
  background: $primary;
  height: 6px;
  width: 80%;
  border-radius: 5px;
  &::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 18px;
    height: 18px;
    border-radius: 50%;
  }
  &.confirmed {
    &::-webkit-slider-thumb {
      background: rgb(255, 10, 0);
    }
  }
  &.active {
    &::-webkit-slider-thumb {
      background: rgb(255, 156, 0);
    }
  }
  &.recovered {
    &::-webkit-slider-thumb {
      background: rgb(62, 161, 13);
    }
  }
  &.deaths {
    &::-webkit-slider-thumb {
      background: rgb(71, 71, 71);
    }
  }
}
/* FIREFOX */
#range::-moz-range-thumb {
  border: none;
  height: 14px;
  width: 14px;
  border-radius: 50%;
  background: $primary-theme;
  cursor: pointer;
}

#range::-moz-range-track {
  width: 100%;
  height: 3px;
  cursor: pointer;
  background: $primary;
  border-radius: 5px;
}

.popover {
  position: fixed;
  border: 1px solid #e4e4e4;
  background: #ffffff;
  padding: 5px 15px;
  font-size: 16px;
  border-radius: 10px;
}

/* HELP CSS */
.notif-help-text {
  font-size: 14px;
  display: flex;
  justify-content: center;
  padding: 10px;
  font-weight: normal;
  span {
    margin-right: 5px;
  }
}

.table {
  text-align: center;
  width: 100%;
  border-collapse: collapse;

  thead {
    font-weight: bolder;
    background: #e4e4e4;
  }
  td,
  th {
    padding: 10px;
  }

  th {
    padding: 10px;
  }

  a {
    color: #000;
  }
}

.statewise-cases {
  tbody tr {
    cursor: pointer;
    border-bottom: 1px solid #f4f4f4;
    font-size: 15px;

    &:nth-child(even) {
      background: #f8f8f8;
    }
  }
  thead > tr > th:nth-child(2) {
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    border-right: 2px solid #fff;
  }
  thead .heading {
    display: flex;
    min-width: 100px;
    justify-content: center;
  }

  td,
  th {
    padding: 8px 2px;
  }

  td:nth-child(2),
  th:nth-child(2) {
    text-align: left;
    max-width: 7.5rem;
    font-size: 1.1em;
  }

  tbody {
    tr.fold {
      background: transparent;
      > td {
        padding: 0;
      }
      .districts-table {
        transition: all 0.4s ease;
      }
    }
  }
}

.state-row {
  &.open {
    background: #f5f5f5;
    box-shadow: -1px 3px 5px 2px #e4e4e4;
    .expand-icon svg {
      transform: rotateZ(90deg);
    }
  }
  .expand-icon svg {
    transition: all 0.4s ease-in-out;
  }
}
.clickable-header {
  border-radius: 10px;
  border-right: 2px solid #fff;
}
.confirmed {
  color: red;
}
.recovered {
  color: green;
}
.deaths {
  color: gray;
}
.active {
  color: #ffa500;
}

.state-row .delta,
.fold .delta {
  font-size: 11px;
  font-weight: 400;
}

/* Districts Table */
.state-last-update {
  display: flex;
  align-items: center;
  justify-content: space-around;
  .state-desc-header {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .testing-stats {
    padding: 10px;
    border-radius: 5px;
    margin: 5px;
    background: rgba(32,26,162,.12549);
    color: rgba(32,26,162,.866667);
  }
}

.statewise-cases .districts-table {
  table {
    width: 100%;
    tr td {
      padding: 4px;
      text-align: center;
    }
    tr td:nth-child(2) {
      text-align: center;
    }
    th {
      padding: 4px;
    }
  }
  .title {
    display: inline-block;
  }
}
.sorted-svg {
  width: 10px;
  right: 0;
  transform: rotate(135deg);
  stroke-width: 5px;
  align-self: center;
  display: inline-block;
  margin: -7px -3px -6px 0.25rem;
  color: rgba(108, 117, 125, 0.6);
}

.bell-icon {
  transition: all 0.4s ease-in-out;
  cursor: pointer;
  &.active {
    fill: #fbd30c;
    animation: bellshake 0.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
    &.disabled {
      fill: rgba(255, 219, 37, 0.45098039215686275);
      stroke: #9c9c9c;
    }
  }
}
/* ... */

